--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-NEWS_API_KEY=your_api_key_here
+REACT_APP_NEWS_API_KEY=9caedeabcb204fa1a7917c1e067306d9
+NEWS_API_KEY=9caedeabcb204fa1a7917c1e067306d9
+REACT_APP_API_URL=https://your-production-api-url.com
